Task 10: flex wrap for para corrected

--- a/task-10/style.css
+++ b/task-10/style.css
@@ -95,11 +95,16 @@ input[type="radio"] {
     padding: 40px;
     text-align: center;
     width: 100%;
-    flex-shrink: 0;
+    flex-wrap: wrap;
+}
+
+p{
+    display: block;
+    flex-wrap: wrap;
 }
 
 .section img{
-    width: 20%;
+    width: 50%;
 }
 
 .footer{
